--- a/firestore-import/package.json
+++ b/firestore-import/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firestore-import-blog",
+  "name": "firestore-import",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
