--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,12 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <!-- For Android 12 (API 32) and below -->
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"
-        android:maxSdkVersion="32" />
-    <!-- For Android 13 (API 33) and above - more granular media permissions -->
-    <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -18,7 +12,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DiabetEase">
         <activity
-            android:name=".AboutActivity"
+            android:name=".SpecificRecipeActivity"
             android:exported="false" />
         <activity
             android:name=".RecipeResultActivity"
@@ -34,8 +28,6 @@
             android:exported="false" />
         <activity
             android:name=".RecipeActivity"
-            android:exported="false" />
-        <activity android:name=".SpecificRecipeActivity"
             android:exported="false" />
         <activity
             android:name=".Step4Activity"
